# k-extract

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: loop.sh  stats.sh
specs/: index.md
specs/agent/: agent-architecture.md  agent-tools.md  prompt-generation.md  prompt-patterns.md
specs/concurrency/: concurrency-model.md
specs/data-sources/: data-source-config.md  multi-source.md
specs/decisions/: technology-choices.md
specs/domain/: domain-model.md
specs/lessons-learned/: v1-to-v2-evolution.md
specs/process/: config-schema.md  extraction-pipeline.md  guided-session.md  job-lifecycle.md  output-format.md
specs/prompts/: implementation.md  process-revision.md  project-manager.md  verifier.md
specs/reviews/: task-001.md  task-002.md  task-004.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md  task-013.md  task-016.md  task-019.md  task-020.md  task-024.md
specs/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md  task-013.md  task-014.md  task-015.md  task-016.md  task-017.md  task-018.md  task-019.md  task-020.md  task-021.md  task-022.md  task-023.md  task-024.md  task-025.md
src/k_extract/cli/: __init__.py  display.py  init.py  jobs.py  run.py
src/k_extract/config/: loader.py  schema.py  settings.py
src/k_extract/domain/: entities.py  mutations.py  ontology.py  relationships.py
src/k_extract/extraction/: agent.py  hooks.py  logging.py  models.py  prompts.py  store.py  tools.py
src/k_extract/extraction/templates/: job_description.txt  system_prompt.txt
src/k_extract/pipeline/: database.py  defines.py  fingerprint.py  jobs.py  orchestrator.py  progress.py  sources.py  worker.py  writer.py
tests/cli/: test_cli.py  test_display.py  test_init.py  test_jobs.py
tests/config/: test_loader.py  test_schema.py  test_settings.py
tests/domain/: test_entities.py  test_mutations.py  test_ontology.py  test_relationships.py
tests/e2e/: test_full_pipeline.py
tests/extraction/: test_agent.py  test_prompts.py  test_store.py  test_tools.py
tests/pipeline/: test_database.py  test_defines.py  test_fingerprint.py  test_jobs.py  test_orchestrator.py  test_progress.py  test_sources.py  test_worker.py  test_writer.py
